# project_2_calories_tg_bot

./: .dockerignore  Dockerfile  README.md  bot.py  calories_tracker.db  db.py  db_old.py  models.py  models_old.py  models_old2.py  pyproject.toml  requirements.txt  services.py
