[project]
name = "project-2-calories-tg-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikhail",email = "mialbarinov@edu.hse.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "aiogram (>=3.24.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlmodel (>=0.0.32,<0.0.33)",
    "requests (>=2.32.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "openai (>=2.17.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120


